# Laba

./: CMakeLists.txt  Doxyfile  Initializations.cpp  README.md  header.h  main.cpp
.github/workflows/: cmake.yml
Funcs/: CMakeLists.txt  functions.h  math_func.cpp  output_func.cpp
MyTest/: CMakeLists.txt  myTest.cpp
